--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,6 +24,17 @@ jobs:
     - name: Publish .NET Core Project
       run: dotnet publish VscodeBlazor.csproj -c Release -o release --nologo
       
+    # 修改 index.html 的 base href 設定
+    - name: 修改 index.html 的 base href 設定
+      run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorGitHubPage\/" \/>/g' release/wwwroot/index.html
+        
+    - name: 新增 .nojekyll 檔
+      run: touch release/wwwroot/.nojekyll
+      
+    # 複製 index.html 成 404.html
+    - name: 複製 index.html 成 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      
     - name: Commit wwwroot to GitHub Pages
       uses: a709743380/github-pages-deploy-action@v7.0.0
       with:
