--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       
     # 修改 index.html 的 base href 設定
     - name: 修改 index.html 的 base href 設定
-      run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorGitHubPage\/" \/>/g' release/wwwroot/index.html
+      run: sed -i 's/<base href="\/" \/>/<base href="\/VscodeBlazor\/" \/>/g' release/wwwroot/index.html
         
     - name: 新增 .nojekyll 檔
       run: touch release/wwwroot/.nojekyll
