--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,11 +27,11 @@ jobs:
       run: sed -i 's/<base href="\/" \/>/<base href="\/VscodeBlazor\/" \/>/g' release/wwwroot/index.html
         
     - name: 新增 .nojekyll 檔
-      run: touch release/wwwroot/.nojekyll
+      run: touch wwwroot/.nojekyll
       
     # 複製 index.html 成 404.html
     - name: 複製 index.html 成 404.html
-      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      run: cp wwwroot/index.html /wwwroot/404.html
       
     - name: Commit wwwroot to GitHub Pages
       uses: a709743380/github-pages-deploy-action@v7.0.0
