--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -32,6 +29,17 @@ jobs:
     # 複製 index.html 成 404.html
     - name: 複製 index.html 成 404.html
       run: cp wwwroot/index.html /wwwroot/404.html
+      
+    - name: Check if gh-pages branch exists
+      run: |
+        if ! git rev-parse --verify gh-pages; then
+          git checkout --orphan gh-pages
+          git rm -rf .
+          touch .nojekyll
+          git add .nojekyll
+          git commit -m "Initial commit"
+          git push origin gh-pages
+        fi
       
     - name: Commit wwwroot to GitHub Pages
       with:
