--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,30 +10,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 7.0.x
-   # 修改成專案名稱    
+      
     - name: Publish .NET Core Project
       run: dotnet publish VscodeBlazor.csproj -c Release -o release --nologo
       
-    - name: finish
+    - name: Finish
       run: echo "dotnet publish VscodeBlazor.csproj -c Release -o release --nologo"
-    # 修改 index.html 的 base href 設定
-    
-    - name: 修改 index.html 的 base href 設定
+      
+    - name: Modify base href in index.html
       run: sed -i 's/<base href="\/" \/>/<base href="\/VscodeBlazor\/" \/>/g' release/wwwroot/index.html
         
-    - name: 新增 .nojekyll 檔
+    - name: Create .nojekyll file
       run: touch wwwroot/.nojekyll
       
-    # 複製 index.html 成 404.html
-    - name: 複製 index.html 成 404.html
-      run: cp wwwroot/index.html /wwwroot/404.html
+    - name: Copy index.html to 404.html
+      run: cp wwwroot/index.html wwwroot/404.html
       
     - name: Commit wwwroot to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-          BRANCH: gh-pages
-          FOLDER: release/wwwroot
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./release/wwwroot
